[project]
name = "dbt-common"
dynamic = ["version"]
description = "The shared common utilities that dbt-core and adapter implementations use"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "agate~=1.7.0",
  "colorama>=0.3.9,<0.5",
  "isodate>=0.6,<0.7",
  "jsonschema~=4.0",
  "Jinja2~=3.0",
  "mashumaro[msgpack]~=3.9",
  "pathspec>=0.9,<0.12", # TODO: I'm not sure this is needed.  check search.py?
  "protobuf>=4.0.0",
  "python-dateutil~=2.0",
  "requests<3.0.0",
  "typing-extensions~=4.4",
]

[tool.hatch.version]
path = "dbt_common/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.changes",
  ".changie.yaml",
  ".gitignore",
  ".pre-commit-config.yaml",
  "CONTRIBUTING.md",
  "MAKEFILE",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["dbt_common"]

[tool.hatch.envs.dev-env.scripts]
all = ["pre-commit run --all-files"]

[tool.hatch.envs.dev-env]
description = "Env for running development commands like pytest / pre-commit"
dependencies = [
  "pytest~=7.3",
  "pytest-xdist~=3.2",
  "httpx~=0.24",
  "hypothesis~=6.87",
  "pre-commit~=3.2",
  "isort~=5.12",
  "black~=23.3",
  "ruff==0.0.260",
  "mypy~=1.3",
  "pytest~=7.3",
  "types-Jinja2~=2.11",
  "types-jsonschema~=4.17",
  "types-python-dateutil~=2.8",
  "types-PyYAML~=6.0",
]

[tool.ruff]
line-length = 120
select = [
  "E", # Pycodestyle
  "F", # Pyflakes
  "W", # Whitespace
  "D", # Pydocs
]
ignore = [
  # Missing docstring in public module -- often docs handled within classes
  "D100",
  # Missing docstring in public package -- often docs handled within files not __init__.py
  "D104"
]
# Let ruff autofix these errors.
# F401 - Unused imports.
fixable = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "third-party-stubs/"
namespace_packages = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true

# Don't run the extensive mypy checks on custom stubs
[[tool.mypy.overrides]]
module = ["logbook.*"]
disallow_untyped_defs = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
